--- a/funny.html
+++ b/funny.html
@@ -11,6 +11,7 @@
             只是想分享可愛的Karameruヽ(✿ﾟ▽ﾟ)ノ
         </h1>
         <h2>發現背景圖片可以使用GIF之後，就想放一下…</h2>
+        <h3><a href="funny.html">check!</a></h3>
         <link href="funny.css" rel="stylesheet" type="text/css"><!--導入CSS樣式文件-->
     </header>
     <main>
